# mvparallelimg

project/: CMakeLists.txt
project/source/include/: SParallelImg.h  zip_compress.h
project/source/mvlib/source/include/mvlib/graphics/: mv_graphics_png.h
project/source/mvlib/source/lib/: mv_graphics_png.c
project/source/src/: main.cpp  zip_compress.c
